<resources>
    <string name="app_name">Gymtime</string>
    <string name="hello">Hello World</string>
    <string name="title_activity_main"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome Admin</string>
    <string name="nav_header_subtitle">Fitness plus</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_more_info">More Info</string>
    <string name="action_measurement">Measurement</string>
    <string name="action_diet">Diet</string>
    <string name="action_workout">Workout</string>
    <string name="select_domain">Select Domain</string>
    <string name="select_company">Select Company</string>
    <string name="wel_gymtime">Welcome To GymTime</string>
    <string name="enter_url">Please enter your unique code</string>
    <string name="url_hint">1</string>
    <string name="url_save_hint">Save</string>
    <string name="server_exception">server connection failed .</string>
    <string name="ok">OK</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="error_unique_code">Invalid Unique Code.Please enter valid Unique Code</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="menu_collections">All Collection</string>
    <string name="menu_today_enquiry">Today\'s Enquiry</string>
    <string name="menu_followup">Follow Ups</string>
    <string name="menu_today_adminssion">Enrollment</string>
    <string name="menu_switch_branch">Switch Branch</string>
    <string name="menu_generate_qr">Generate QR Code</string>
    <string name="menu_cont_us">Contact Us</string>
    <string name="menu_term_condi">Terms &amp; Conditions</string>
    <string name="menu_push_noti">Push Notifications</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_upload_logo">Upload Company Logo</string>
    <string name="todays_coll">Today\'s collection</string>
    <string name="enquiry">Enquiry</string>
    <string name="add_member">Add Member</string>
    <string name="add_course">Add Course</string>
    <string name="course">Billing</string>
    <string name="renew">Renew</string>
    <string name="course_reg">Billing</string>
    <string name="balance_receipt">Exiting Balance</string>
    <string name="add_balance">Balance Payment</string>
    <string name="balance">Balance</string>
    <string name="expenses">Expense</string>
    <string name="attendance">Attendance</string>
    <string name="measurement">Measurement</string>
    <string name="exi_expenses">Existing Expense</string>
    <string name="mem_info">Member Info</string>
    <string name="pos">POS</string>
    <string name="workout">Workout</string>
    <string name="collections">Collection</string>
    <string name="diet">Diet</string>
    <string name="noti">Notifications</string>
    <string name="staff_attendance">Staff Attendance</string>
    <string name="create_plan">Create Plans</string>
    <string name="member_bday">Member Birthday</string>
    <string name="staff_bday">Staff Birthday</string>
    <string name="member_anniversary">Anniversary</string>
    <string name="enquiry_followup">Enquiry Followup</string>
    <string name="followup">Followup</string>
    <string name="enquiry_followup_details">Followups Details</string>
    <string name="enquiry_followup_more_dtl">Followups More Information</string>
    <string name="active_members">Active Members</string>
    <string name="deactive_members">Inactive Members</string>
    <string name="member_end_date">Membership End Date</string>
    <string name="payment_date">Payment Date</string>
    <string name="other_followup">Other Followups</string>
    <string name="done_followup">Done Followups</string>
    <string name="done_followup_filters">Done Followups Filters</string>
    <string name="renew_followup">Renew Followups</string>
    <string name="nodata">No Records Found</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPasswordText">Forgot Password ?</string>
    <string name="back_to_login">Back To Login</string>
    <string name="login_btn">Login</string>
    <string name="recover_password_btn">Recover Password</string>
    <string name="termsNConditions"><u><![CDATA[Terms & Conditions ]]></u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="invalid_login">Invalid login details !</string>
    <string name="invalid_username">Invalid username or Contact !</string>
    <string name="password_error">Enter Valid Password !</string>
    <string name="invalid_username_error">Enter Valid Username !</string>
    <string name="internet_unavailable">No Internet Connection !</string>
    <string name="success" translatable="false">success</string>
    <string name="error" translatable="false">error</string>
    <string name="one" translatable="false">1</string>
    <string name="action" translatable="false">action</string>
    <string name="zero" translatable="false">0</string>
    <string name="inavlid" translatable="false">Invalid login</string>
    <string name="user_id" translatable="false">user_id</string>
    <string name="lead_id" translatable="false">lead_id</string>
    <string name="client_id" translatable="false">client_id</string>
    <string name="emp_id" translatable="false">emp_id</string>
    <string name="passworderror">Please enter a valid password</string>
    <string name="mobileerror">Please enter valid mobile no.</string>
    <string name="errortry">Please try after some time</string>
    <string name="pleasewait">Please wait..</string>
    <string name="inavlidlogin">Check Login Details</string>
    <string name="three" translatable="false">3</string>
    <string name="two" translatable="false">2</string>
    <string name="or">OR</string>
    <string name="cont">Continue With</string>
    <string name="for_pass">Please contact on this number 9975628849 for any query or support</string>
    <string name="monthly_collection">Monthly</string>
    <string name="daily_collection">Today\'s</string>
    <string name="monthly_collect">Today</string>
    <string name="default_value">₹ 0.00</string>
    <string name="nextFollowupDate">Next Followup:</string>
    <string name="enquiry_filter">Apply Filters</string>
    <string name="exi_enquiry">Existing Enquiry</string>
    <string name="add_enquiry">Add Enquiry</string>
    <string name="enquiry_filters">Enquiry Filters</string>
    <string name="member_filters">Member Filters</string>
    <string name="course_filters">Billing Filters</string>
    <string name="expense_filters">Expense Filters</string>
    <string name="coll_filters">Collection Filters</string>
    <string name="other_foll_filters">Other Followup Filters</string>
    <string name="required_asterisk"><font fgcolor='#cc0029'> *</font></string>
    <string name="hint_name">Name <font fgcolor="#ff0000"><sup>*</sup></font></string>
    <string name="hints"><![CDATA[Name<font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_enquiry_date">Enquiry Date</string>
    <string name="hint_gender">Gender *</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_mob_no">Contact*</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">DOB</string>
    <string name="hint_location">Location</string>
    <string name="hint_add">Address</string>
    <string name="hint_enq_type">Enquiry Type</string>
    <string name="hint_enq_source">Enquiry Source</string>
    <string name="hint_enq_for">Enquiry for</string>
    <string name="hint_enq_rating">Rating *</string>
    <string name="hint_enq_exe_name">Budget</string>
    <string name="hint_foll_type">Followup Type</string>
    <string name="hint_call_res">Call Response Type</string>
    <string name="hint_next_foll_date">Next Followup Date *</string>
    <string name="hint_comment">Comment *</string>
    <string name="hint_close">close</string>
    <string name="hint_register">Register</string>
    <string name="hint_submit">Sumbit</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="hint_add_comment">Add a comment&#8230;</string>
    <string name="err_msg_name">Enter your Full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_cont">Enter your valid contact number.</string>
    <string name="err_msg_id">Enter your valid Staff Id.</string>
    <string name="err_msg_comment">Please enter Comment</string>
    <string name="err_msg_occupation">Please Enter the Occupation</string>
    <string name="err_msg_enq_type">Please enter enquiry type</string>
    <string name="err_msg_enq_source">please Enter the enquiry source</string>
    <string name="err_msg_call_res">Please enter the call response</string>
    <string name="err_msg_next_foll_date">Please enter next followup date</string>
    <string name="err_msg_next_payment_date">Please enter next payment date</string>
    <string name="err_msg_ttl_of_expense">Please enter Title of Expense</string>
    <string name="err_msg_payment_dtl">Please enter payment Details</string>
    <string name="err_msg_amt">Please enter amount</string>
    <string name="err_msg_payment_disc">Please enter payment description</string>
    <string name="err_msg_budget">Please enter budget</string>
    <string name="err_msg_expe_date">Please enter expense date</string>
    <string name="update_add">Update your address</string>
    <string name="update_mob">Update your Mobile</string>
    <string name="err_msg_startdate">Please enter Start Date</string>
    <string name="err_msg_paid">Please enter paid amount</string>
    <string name="err_msg_days">Enter your Days</string>
    <string name="err_msg_no_of_meals">Enter your No Of Meals</string>
    <string name="err_msg_charges">Enter your Charges</string>
    <string name="err_msg_time">Please Enter Time</string>
    <string name="err_msg_meal">Please Enter Meal</string>
    <string name="err_msg_pay_details">Enter your Pay Details</string>
    <string name="err_msg_package_name">Enter your Package Name</string>
    <string name="err_msg_duration">Enter your Duration</string>
    <string name="err_msg_session">Enter your Session</string>
    <string name="err_msg_tax">Enter your Tax</string>
    <string name="err_msg_rack_amt">Enter your Rack Amount</string>
    <string name="err_msg_max_disc">Enter your Max Discount</string>
    <string name="all">All</string>
    <string name="converted">Converted</string>
    <string name="na">NA</string>
    <string name="prompt_enquiry_type">Select Enquiry Type</string>
    <string name="prompt_foll_type">Select Followup Type</string>
    <string name="enquiry_type">Enquiry Type</string>
    <string name="call_res">Response</string>
    <string name="rating">Rating *</string>
    <string name="copy_right">© 2019 GYMTIME. All Rights Reserved </string>
    <string name="nav">"@" Navkar Dreamsoft</string>
    <string name="version">Version 1.0</string>
    <string name="Back">Back</string>
    <string name="advice">Advice</string>
    <string name="charges">Charges*</string>
    <string name="pay_details">Pay Details*</string>
    <string name="submit">Submit</string>
</resources>