<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<item android:title=""-->
        <!--android:id="@+id/selected_org">-->
        <!--<menu>-->
            <item
                android:id="@+id/nav_coll"
                android:icon="@drawable/collections"
                android:title="@string/menu_collections" />
            <item
                android:id="@+id/nav_todays_enq"
                android:icon="@drawable/enquiry"
                android:title="@string/menu_today_enquiry" />
            <item
            android:id="@+id/nav_todays_admi"
            android:icon="@drawable/admission"
            android:title="@string/menu_today_adminssion" />
            <item
                android:id="@+id/nav_push_noti"
                android:icon="@drawable/ic_notifications"
                android:title="@string/menu_push_noti" />

        <!--</menu>-->
    <!--</item>-->
    <item android:title="Other"
      >
        <menu>
        <group android:checkableBehavior="single">
            <item
            android:id="@+id/nav_switch_branch"
            android:icon="@drawable/switchbranch"
            android:title="@string/menu_switch_branch" />
            <item
                android:id="@+id/nav_generate_qr"
                android:icon="@drawable/scanrq"
                android:title="@string/menu_generate_qr" />

            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/term"
                android:title="@string/menu_term_condi" />

        </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout" />
</menu>
