<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/spacing_middle"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/splashlogo" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:id="@+id/wel_user"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/company_name"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        />

</LinearLayout>
