<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Activity.SelectDomainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/spacing_large"
  >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_url"
        android:textAlignment="center"
        android:gravity="start"
        android:layout_gravity="start"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue_grey_800" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/domainurl"
        android:inputType="text"
        android:hint="@string/enter_url"
        android:text="@string/url_hint"
        android:drawableStart="@drawable/ic_web"
        android:textColor="@android:color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:id="@+id/save"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/btn_rounded"
        android:text="@string/url_save_hint"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>


</LinearLayout>