<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_mlarge"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/payDateTV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/followup"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/grey_20"
            app:srcCompat="@drawable/ic_close" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_foll_type"
            android:textSize="11sp"
            android:paddingTop="@dimen/spacing_medium"
            android:visibility="gone"
            android:id="@+id/txt_folltype"
            android:textColor="@android:color/darker_gray"
            />
        <Spinner
            android:id="@+id/spinner_folltype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:textColor="@android:color/darker_gray"
            android:dropDownSelector="@color/white"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@android:color/darker_gray" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_res"
            android:textSize="11sp"
            android:paddingTop="@dimen/spacing_medium"
            android:visibility="gone"
            android:id="@+id/txt_callres"
            android:textColor="@android:color/darker_gray"
            />
        <Spinner
            android:id="@+id/spinner_call_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:dropDownSelector="@color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_80" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="11sp"
            android:paddingTop="@dimen/spacing_medium"
            android:visibility="gone"
            android:id="@+id/txt_rating"
            android:textColor="@android:color/darker_gray"
            />
        <Spinner
            android:id="@+id/spinner_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:dropDownSelector="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_next_foll_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/input_next_foll_date"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:focusableInTouchMode="false"
                android:editable="false"
                android:backgroundTint="@color/black"
                android:layout_height="wrap_content"
                android:hint="@string/hint_next_foll_date" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_enquiry_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/input_enquiry_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_80"
                android:textColorHint="@color/grey_80"
                android:backgroundTint="@color/black"
                android:inputType="text"
                android:hint="@string/hint_comment" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"
        android:id="@+id/btn_submit"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_rounded"
        android:textColor="@color/white"/>


</LinearLayout>