<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/step_four">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_marginTop="@dimen/spacing_mlarge"
            android:background="@android:color/transparent"
            android:tint="@color/grey_60"
            app:srcCompat="@drawable/advice" />
        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="match_parent" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_advice"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/input_advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapWords|textCapSentences"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:hint="@string/advice" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_marginTop="@dimen/spacing_mlarge"
            android:background="@android:color/transparent"
            android:tint="@color/grey_60"
            app:srcCompat="@drawable/discount" />

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="match_parent" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_charges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/input_charges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:capitalize="characters"
                android:inputType="number"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:hint="@string/charges" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_marginTop="@dimen/spacing_mlarge"
            android:background="@android:color/transparent"
            android:tint="@color/grey_60"
            app:srcCompat="@drawable/ic_payment" />

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="match_parent" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pay_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/input_pay_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:capitalize="characters"
                android:inputType="textCapWords|textCapSentences"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:hint="@string/pay_details" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_back3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginLeft="44dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/Back"
            android:onClick="clickAction"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/submit"
            android:onClick="clickAction"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>